tests/diag/while_keyword.ty
fn main():
    i := 0
    while i < 3:
        i = i + 1
